microconfig-core/src/test/resources/repo/components/exceptions/bad/badDelimiter/exception.yl
Incorrect delimiter in 'key=value' in '../components/exceptions/bad/badDelimiter/application.yl.yaml:1'
Yaml property must contain ':' as delimiter.